<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainFragment"
    android:id="@+id/swipingMain"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true">


    <!-- res/layout/fragment_main.xml -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:text="Name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileDetails"
            android:layout_width="207dp"
            android:layout_height="53dp"
            android:layout_marginBottom="16dp"
            android:text="Gender, Age, Location, Height" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile" />

        <TextView
            android:id="@+id/prompt1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Prompt 1:"
            android:translationY="27dp" />

        <TextView
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Answer 1:"
            android:translationY="20dp" />

        <TextView
            android:id="@+id/prompt2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Prompt 2"
            android:translationY="50dp" />

        <TextView
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Answer 2:"
            android:translationY="40dp"/>

        <Button
            android:id="@+id/matchButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Match"
            android:translationY="120dp" />

        <Button
            android:id="@+id/rejectButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Reject"
            android:translationY="130dp" />
    </LinearLayout>


</FrameLayout>