...
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Home"
            android:background="?attr/selectableItemBackground" />

        <Button
            android:id="@+id/profileButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Profile"
            android:background="?attr/selectableItemBackground" />

        <Button
            android:id="@+id/leaderboardButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Leaderboard"
            android:background="?attr/selectableItemBackground" />

...
